Mail Helper Added

--- a/.env
+++ b/.env
@@ -1,3 +1,5 @@
 MONGO_URL=mongodb+srv://nirmalchochnage:nirmal@cluster0.p3cimlh.mongodb.net/
 TOKEN_SECRET=NEXTJS
 DOMAIN= http://localhost:3000
+MAIL_TRAP_USER=d4b393a6bd2642
+MAIL_TRAP_PASS=7a74cb7afff241
